--- a/src/assets/css/session-modal.css
+++ b/src/assets/css/session-modal.css
@@ -73,6 +73,10 @@
   transform: rotate(-45deg);
 }
 
+#session-expired-form {
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
 
   .modal-quantic__inner {
